--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "eslint-plugin-testing-library": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "sanitize.css": "^13.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26"
   }
 }
