--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "hambaknoon",
-  "homepage": "https://hyunjoogo.github.io/hambaknoon",
   "version": "0.1.0",
-  "private": true,
-  "main": "dist/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "test": "react-scripts test",
