--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hambaknoon",
+  "homepage": "https://hyunjoogo.github.io/hambaknoon",
   "version": "0.1.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
